# ctxvault

./: CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  mac-app-alpha-feedback.yml  v0.4.0-first-run-feedback.yml
.github/workflows/: publish-python.yml
docs/: CASE_STUDY_QUICKSTART.md  experimental-contract-evolution-policy.md  public-core-boundary.md  public-release-checklist.md  v0.3-compiled-context.md  v0.3-release-notes.md  v0.3.1-release-notes.md  v0.4.0-release-notes.md  v0.4.1-execution-approval-matrix.md  v0.4.1-projection-governance-kernel.md  v0.4.1-projection-rights-schema-explanation.md  v0.4.1-release-notes.md
docs/mechanism/: governed-context-projection.md  governed-context-projection.zh.md
docs/v0.3.1-local-safety/: approved-boundary-decisions.md  hardening-status.md
examples/case-study-preview/: README.md
fixtures/controls/: protection-policy.json
fixtures/v0.4.1-projection-governance-kernel/: approval-matrix.json  example-projection.json  example-receipt.json
release/v0.5.0/: RELEASE_NOTES.md  mechanism-note-governed-context-projection.md  public-artifact-manifest-and-checklist.md  (+1 more)
schemas/: README.md
scripts/: run_v040_context_handoff_trial.py  run_v040_real_repo_trial.py  validate-case-study-templates.py  validate_fixtures.py
tests/: test_cli.py  test_context_slices.py  test_mcp_stdio.py  test_policy.py  test_v040_real_repo_trial.py  test_v041_projection_governance_kernel.py  test_v062_package_and_outreach_preflight.py  test_v062_public_surface_cleanup.py  test_v062_selected_package_outreach_options.py
(+33 files in other folders)
