[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ctxvault"
version = "0.3.0"
description = "Compiled context injection with local receipts for AI work"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = []

[project.optional-dependencies]
schema = ["pydantic>=2.7"]

[project.scripts]
ctxvault = "ctxvault.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
