[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ctxvault"
version = "0.4.1"
description = "Deterministic context extraction, safe handoff, and receipts before AI tools"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = []

[project.optional-dependencies]
schema = ["pydantic>=2.7"]

[project.scripts]
ctxvault = "ctxvault.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
